[package]
name = "gate-rs"
version = "0.1.0"
authors = ["yixin <yixin.kosun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.0"
crossbeam-channel = "0.3.9"
crossbeam = "0.7.2"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] } 
# grpcio = "0.4.4"
futures = "0.1.28"
libc = "0.2" 
protobuf = "2.8.0"
prost = { version = "0.5", optional = true }
bytes = { version = "0.4.12", optional = true }